# Distill-Portal

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  PRD.md  README.md  coordinator-prompt.md  phase-1.progress.md  phase1-coordinator-prompt.md
.github/workflows/: ci.yml
apps/backend/: Cargo.toml  README.md
apps/backend/src/: app.rs  http_api.rs  lib.rs  main.rs
apps/backend/tests/: http_api.rs
apps/frontend/: .gitignore  Cargo.toml  README.md  bunfig.toml  index.html  package.json  playwright.config.ts  test-setup.ts  tsconfig.json  vite.config.ts
apps/frontend/e2e/: inspection.spec.ts
apps/frontend/e2e/harness/: backend.ts
apps/frontend/src/: App.test.tsx  App.tsx  app.rs  backend_client.rs  lib.rs  main.rs  main.tsx
apps/frontend/src/components/: ActionBar.css  ActionBar.test.tsx  ActionBar.tsx  Drawer.css  Drawer.test.tsx  Drawer.tsx  Pagination.css  Pagination.test.tsx  Pagination.tsx  ScanErrorsCallout.test.tsx  ScanErrorsCallout.tsx  ScanErrorsPanel.tsx  SourceSessionsTable.tsx  StatusBadge.test.tsx  StatusBadge.tsx  StoredSessionsTable.tsx  Toast.css  Toast.test.tsx  Toast.tsx
apps/frontend/src/features/sessions/: SessionDetail.css  SessionDetail.test.tsx  SessionDetail.tsx  SessionFilters.css  SessionFilters.test.tsx  SessionFilters.tsx  SessionsTable.css  SessionsTable.test.tsx  SessionsTable.tsx  SessionsView.css  SessionsView.tsx  applyPagination.test.ts  applyPagination.ts  filterSessions.test.ts  filterSessions.ts  lastRescan.test.ts  lastRescan.ts  mergeSessions.test.ts  mergeSessions.ts  rawPreview.test.ts  rawPreview.ts  relativeTime.test.ts  relativeTime.ts  types.ts  useSessionFilters.test.ts  useSessionFilters.ts  useToastQueue.test.ts  useToastQueue.ts
apps/frontend/src/lib/: api.ts  config.ts  contracts.ts
apps/frontend/src/styles/: app.css  global.css  reset.css  tokens.css
components/collector-runtime/: Cargo.toml  README.md
components/collector-runtime/src/: lib.rs  scanner.rs  types.rs
components/collector-runtime/src/adapters/: claude_code.rs  codex.rs  mod.rs
components/collector-runtime/tests/: parsers.rs
components/configuration/: Cargo.toml  README.md
components/configuration/src/: lib.rs
components/ingest-service/: Cargo.toml  README.md
components/ingest-service/src/: lib.rs  service.rs  types.rs
components/observability/: Cargo.toml  README.md
components/observability/src/: lib.rs
components/raw-session-store/: Cargo.toml  README.md
components/raw-session-store/src/: lib.rs  local_fs_blob_store.rs  sqlite.rs
components/ui-api-contracts/: Cargo.toml  README.md
components/ui-api-contracts/bindings/: ImportReport.ts  ImportSourceSessionsRequest.ts  PersistedScanError.ts  RescanReport.ts  SessionSyncStatus.ts  SourceSessionView.ts  StoredSessionRecord.ts  StoredSessionView.ts  Tool.ts
components/ui-api-contracts/src/: lib.rs
components/ui-api-contracts/tests/: ts_bindings.rs
docs/: README.md  dependency-rules.md  dev-commands.md
docs/features/: inspection-surface.md  session-store.md
docs/playbooks/: modify-backend-api.md  modify-frontend-page.md  modify-session-store.md
progress/: README.md  phase-1.progress.md  phase-2.progress.md  phase-3.progress.md  phase-4.progress.md
references/: claude-code-session-storage.md  codex-session-storage.md
src/: api.rs  app.rs  config.rs  lib.rs  main.rs
src/collect/: mod.rs  safe_read.rs  scanner.rs
src/collect/adapters/: claude_code.rs  codex.rs  mod.rs
src/ingest/: mod.rs  service.rs  types.rs
src/store/: blob_store.rs  local_fs_blob_store.rs  migrations.rs  mod.rs  sqlite.rs
tests/: phase1.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: inspection_surface.rs
tests/fixtures/claude_code/: sample_session.jsonl
tests/fixtures/codex/: sample_session.jsonl
working/: README.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md
