[workspace]
members = [
    "apps/backend",
    "apps/frontend",
    "components/collector-runtime",
    "components/configuration",
    "components/ingest-service",
    "components/observability",
    "components/raw-session-store",
    "components/ui-api-contracts",
    "tests/e2e",
]
resolver = "2"
