[package]
name = "distill-portal-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
distill-portal-collector-runtime = { path = "../../components/collector-runtime" }
distill-portal-configuration = { path = "../../components/configuration" }
distill-portal-ingest-service = { path = "../../components/ingest-service" }
distill-portal-observability = { path = "../../components/observability" }
distill-portal-raw-session-store = { path = "../../components/raw-session-store" }
distill-portal-ui-api-contracts = { path = "../../components/ui-api-contracts" }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tracing = "0.1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
