[package]
name = "distill-portal-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
bytes = "1"
distill-portal-configuration = { path = "../../components/configuration" }
distill-portal-observability = { path = "../../components/observability" }
distill-portal-ui-api-contracts = { path = "../../components/ui-api-contracts" }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
