[package]
name = "distill-portal-collector-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
distill-portal-ui-api-contracts = { path = "../ui-api-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2"

[dev-dependencies]
tempfile = "3"
