[package]
name = "distill-portal-e2e"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1"
distill-portal-backend = { path = "../../apps/backend" }
distill-portal-configuration = { path = "../../components/configuration" }
distill-portal-frontend = { path = "../../apps/frontend" }
distill-portal-ui-api-contracts = { path = "../../components/ui-api-contracts" }
http-body-util = "0.1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
